# coe-round-robin

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: update-readme-excel-instructions.md
data/: Data CoE Team & Customers.xlsx  dcoe_standup_sprint_to_psa_v3_20250519.xlsx  dcoe_standup_sprint_to_psa_v3_20250627.xlsx
src/: app.py
test/: test_app.py
